Adding reading statues options, and updating database

--- a/booktrackingapp/templates/index.html
+++ b/booktrackingapp/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Book Tracking</title>
+    <link rel="icon" type="image/x-icon" href="/booktrackingapp/static/book_favicon.png">
 </head>
 <body>
 <h1>Book Tracking App</h1>
