--- a/booktrackingapp/templates/index.html
+++ b/booktrackingapp/templates/index.html
@@ -14,9 +14,27 @@
 <ul>
     {% for book in books %}
         <li>
-            <p>Book: {{ book.name }}, Author: {{ book.author }}, Page-count: {{ book.pages }}</p>
-            <p>Description: {{ book.description }}</p>
-            <p>&nbsp;</p>
+            <form action="/" method="post">
+                <p>Book: {{ book.name }}, Author: {{ book.author }}, Page-count: {{ book.pages }}</p>
+                <p>Description: {{ book.description }}</p>
+                <label for="rating">☆ Your Rating:</label> <!--add rating to tabel-->
+                <select class="rating_select">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+                <label for="status">Statues:</label>
+                <select class="status_select">
+                    <option value="none">To Read</option>
+                    <option value="ascending">In Progress</option>
+                    <option value="descending">Completed</option>
+                    <option value="descending">Did not finish</option>
+                </select>
+                <input type="submit" value="Enter">
+                <p>&nbsp;</p>
+            </form>
         </li>
     {% endfor %}
 </ul>
@@ -27,6 +45,28 @@
 <p>Average Rating: </p>
 
 <h2>Personal Library</h2>
+
+<h3>In-Progress</h3>
+{% for user_book in user_books %}
+        <li>
+            {{ user_book.book }}, {{ user_book.status }} {{ user_book.rating }}
+        </li>
+    {% endfor %}
+
+{% for user_book in in_progress_books %}
+    <li>
+        Book Title: {{ user_book.book.name }}
+        Author: {{ user_book.book.author }}
+        Rating: {{ user_books.rating }}
+    </li>
+{% endfor %}
+
+<h3>To Read</h3>
+
+<h3>Completed</h3>
+
+
+{{ user_books }}
 
 </body>
 </html>
