--- a/booktrackingapp/templates/completed.html
+++ b/booktrackingapp/templates/completed.html
@@ -6,16 +6,22 @@
 </head>
 <body>
 
-<h3>Completed</h3>
-
-
+<h1>Completed</h1>
 {% for user_book in completed_books %}
-    <li>
-        Book Title: {{ user_book.book.name }}
-        Author: {{ user_book.book.author }}
-        Rating: {{ user_books.rating }}
-    </li>
+    <form action="/journal_entry" method="POST">
+        {% csrf_token %}
+        <label for="book_chosen_{{ book.id }}"></label>
+        <li>
+            Book Title: {{ user_book.book.name }}
+            Author: {{ user_book.book.author }}
+            Rating: {{ user_book.rating}}
+        </li>
+        <input type="hidden" name="book_chosen_{{ user_book.book.id }}" value="{{ user_book.book.id }}">
+        <input type="submit" value="Go to Entries">
+        <p>&nbsp;</p>
+    </form>
 {% endfor %}
+
 
 </body>
 </html>
